--- a/package.json
+++ b/package.json
@@ -10,5 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4"
+  },
+  "scripts": {
+    "start": "node server",
+    "watch": "nodemon server"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
